[package]
name = "http"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
flate2 = "1.1.5"
infer = "0.19.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["full"]}
tokio-tungstenite = "0.28.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tungstenite = "0.28.0"
